src/components/AaJumbotron/AaJumbotron.scss
@import "../all.sass";
@import "~animate.css";

.aaJumbotron {
    padding: 0;
    margin-bottom: 0;
    p {
        margin: 10px 0 50px 0;
        max-width: 450px;
    }
}

.jumbotron-container {
    height: 100%;
    color: #FFFFFF;
    align-items: center;
    display:flex;
}

.overlayhero{
    .jumbotron-container {
        background-color:rgba(0, 0, 0, 0.5);
    }
}

.aaJumbotron h1 {
    font-weight: bold;
    font-size: 50px;
}

.aaJumbotron .btn {
    border-radius: 0;
    font-size: 20px;
    text-transform: uppercase;
    font-weight: bold;
    padding: 5px 15px;
    background-color: $secondary;
    background-image: none;
    border-width:0;
    &:hover {
        background-color: $primary;
        background-image: none;
    }
}

.heroimage.tophero {
    margin-top: -115px;
    h1 {
        font-size: 4em;
        @media (min-width: 768px) {
            margin-top: 70px;
            margin-left: -8px;
            font-size: 10vw;
        }
    }
}

